--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+absl-py==2.0.0
+addict==2.4.0
 aiofiles==23.2.1
 aiohttp==3.9.1
 aiosignal==1.3.1
+aliyun-python-sdk-core==2.14.0
+aliyun-python-sdk-kms==2.16.2
 altair==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
+audioread==3.0.1
 backoff==2.2.1
 bcrypt==4.1.2
+beartype==0.16.4
 cachetools==5.3.2
 certifi==2023.11.17
 cffi==1.16.0
@@ -19,11 +25,18 @@ click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.2.0
+crcmod==1.7
+cryptography==41.0.7
 cycler==0.12.1
+Cython==0.29.37
 dataclasses-json==0.6.3
+datasets==2.16.1
 decorator==4.4.2
 Deprecated==1.2.14
+dill==0.3.7
 distro==1.9.0
+editdistance==0.6.2
+einops==0.7.0
 exceptiongroup==1.2.0
 fastapi==0.108.0
 ffmpy==0.3.1
@@ -31,13 +44,18 @@ filelock==3.13.1
 flatbuffers==23.5.26
 fonttools==4.47.0
 frozenlist==1.4.1
-fsspec==2023.12.2
+fsspec==2023.10.0
+funasr==0.8.7
+gast==0.5.4
 google-auth==2.25.2
+google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.62.0
-gradio==4.12.0
-gradio_client==0.8.0
+gradio==4.25.0
+gradio_client==0.15.0
 grpcio==1.60.0
 h11==0.14.0
+h5py==3.10.0
+hdbscan==0.8.33
 httpcore==1.0.2
 httptools==0.6.1
 httpx==0.26.0
@@ -48,29 +66,41 @@ imageio==2.33.1
 imageio-ffmpeg==0.4.9
 importlib-metadata==6.11.0
 importlib-resources==6.1.1
+jaconv==0.3.4
+jamo==0.4.1
+jieba==0.42.1
 Jinja2==3.1.2
+jmespath==0.10.0
+joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
+kaldiio==2.18.0
 kiwisolver==1.4.5
 kubernetes==28.1.0
 langchain==0.0.353
 langchain-community==0.0.7
 langchain-core==0.1.4
 langsmith==0.0.75
+lazy_loader==0.3
+librosa==0.10.1
 llvmlite==0.41.1
+Markdown==3.5.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 matplotlib==3.8.2
 mdurl==0.1.2
 mmh3==4.0.1
+modelscope==1.10.0
 monotonic==1.6
 more-itertools==10.1.0
 moviepy==1.0.3
 mpmath==1.3.0
+msgpack==1.0.7
 multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==1.0.0
 networkx==3.2.1
 numba==0.58.1
@@ -90,17 +120,23 @@ opentelemetry-sdk==1.22.0
 opentelemetry-semantic-conventions==0.43b0
 opentelemetry-util-http==0.43b0
 orjson==3.9.10
+oss2==2.18.4
 overrides==7.4.0
 packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
+platformdirs==4.1.0
+pooch==1.8.0
 posthog==3.1.0
 proglog==0.1.10
-protobuf==4.25.1
+protobuf==4.23.4
 pulsar-client==3.3.0
+pyarrow==14.0.2
+pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pycryptodome==3.19.1
 pydantic==2.5.3
 pydantic_core==2.14.6
 pydub==0.25.1
@@ -109,7 +145,8 @@ pyparsing==3.1.1
 PyPika==0.48.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-python-multipart==0.0.6
+python-multipart==0.0.9
+pytorch-wpe==0.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.32.0
@@ -117,34 +154,52 @@ regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==1.3.1
 rich==13.7.0
+rotary-embedding-torch==0.5.3
 rpds-py==0.16.2
 rsa==4.9
+ruff==0.3.5
+scikit-learn==1.3.2
+scipy==1.11.4
 semantic-version==2.10.0
+sentencepiece==0.1.99
 shellingham==1.5.4
+simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soundfile==0.12.1
+soxr==0.3.7
 SpeechRecognition==3.10.1
 SQLAlchemy==2.0.24
 starlette==0.32.0.post1
 sympy==1.12
 tenacity==8.2.3
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+threadpoolctl==3.2.0
 tiktoken==0.5.2
 tokenizers==0.15.0
+tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.0
 torch==2.1.2
+torch-complex==0.4.3
+torchaudio==2.1.2
 tqdm==4.66.1
 typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
+umap==0.1.1
 urllib3==1.26.18
 uvicorn==0.25.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websocket-client==1.7.0
 websockets==11.0.3
+Werkzeug==3.0.1
 wrapt==1.16.0
+xxhash==3.4.1
+yapf==0.40.2
 yarl==1.9.4
 zipp==3.17.0
