update .env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 OPENAI_API_KEY=''
 OPENAI_BASE_URL=''
 
+KIMI_API_KEY=''
+KIMI_BASE_URL=''
+
 LANGCHAIN_TRACING_V2='true'
 LANGCHAIN_API_KEY=''
 LANGCHAIN_PROJECT=''
